1999-10-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/Makefile.am (man_MANS): Added mbchk.1.
	[MAINTAINER_MODE] (mbchk.1): New target.
	* docs/mbchk.1: New file. Generated by help2man.
	
1999-10-18  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* Makefile.am (SUBDIRS): Added util.
	* configure.in: Output util/Makefile.
	* util/Makefile.am: New file.
	* util/mbchk.c: Likewise.
	* util/Makefile.in: Likewise. Generated by automake.
	
1999-10-17  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/Makefile.am (.texi): Canceled because the dependecies can
	be circulated.
	* stage2/builtins.c (embed_func): Set BUF_TRACK to -1 before
	writing	the Stage 1.5 to the disk to clear the cache.
	
1999-10-17  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/boot.c (load_initrd): Change types of *RAMDISK and
	MOVETO to unsigned long.
	Apply the macro RAW_ADDR to MOVETO.
	
1999-10-16  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/multiboot.texi: Include the example source files of a
	Multiboot kernel.
	* docs/src2texi: New file.
	* docs/boot.S: Likewise.
	* docs/multiboot.h: Likewise.
	* docs/kernel.c: Likewise.
	* docs/boot.S.texi: Likewise.
	* docs/multiboot.h.texi: Likewise.
	* docs/kernel.c.texi: Likewise.
	* docs/Makefile.am (EXAMPLES): New varilable.
	(multiboot_TEXINFOS): Likewise.
	(SRC2TEXI): Likewise.
	(noinst_SCRIPTS): Added $(SRC2TEXI).
	(EXTRA_DIST): Added $(EXAMPLES) and $(multiboot_TEXINFOS).
	(%.c.texi): New target.
	(%.h.texi): Likewise.
	(%.S.texi): Likewise.
	
1999-09-22  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

        * multiboot.texi (BIOS device mapping techniques): New section.
        Stolen from bios_mapping.txt in grub-0.5.
        (Data comparison technique): New subsection.
        (I/O restriction technique): Likewise.
        (Example OS code): Rewrited from scratch.
        
1999-09-21  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

        * multiboot.texi: Rename Multiboot Standard to Multiboot